npm i react-native-paper套件、react-native-easy-grid、首頁

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-check-box": "^2.1.7",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-material-design": "^0.3.7",
+    "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
