--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-material-design": "^0.3.7",
-    "react-native-paper": "^4.4.1",
+    "react-native-paper": "3.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "^0.13.18"
+    "react-native-web": "^0.13.18",
+    "expo-notifications": "~0.7.2",
+    "expo-permissions": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
