--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-firebase-core": "~1.2.0",
     "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
+    "expo-notifications": "~0.7.2",
+    "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
@@ -32,10 +34,10 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-tab-view": "^2.15.2",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "^0.13.18",
-    "expo-notifications": "~0.7.2",
-    "expo-permissions": "~9.0.1"
+    "react-native-web": "^0.13.18"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
