課程列表、導覽列

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expo-firebase-core": "~1.2.0",
     "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
+    "expo-notifications": "~0.7.2",
+    "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.2.0",
-    "expo-status-bar": "~1.0.2",
+    "expo-status-bar": "^1.0.3",
     "firebase": "7.9.0",
-    "native-base": "^2.13.14",
+    "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
@@ -28,7 +30,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-material-design": "^0.3.7",
-    "react-native-paper": "^4.4.1",
+    "react-native-paper": "3.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
@@ -36,7 +38,7 @@
     "react-native-web": "^0.13.18"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "babel-preset-expo": "^8.3.0"
   },
   "private": true
